--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
                 <a href="https://www.instagram.com/tazie.md?igsh=cGt1aXM1d3A3Ymdp" target="_blank" class="social-icon instagram" title="Instagram"><i class="fab fa-instagram"></i></a>
                 <a href="https://github.com/DevMdAdeeb" target="_blank" class="social-icon github" title="GitHub"><i class="fab fa-github"></i></a>
                 <a href="https://youtube.com/@mido-tech?si=_6uMz8C4DjGvsEr2" target="_blank" class="social-icon youtube" title="YouTube"><i class="fab fa-youtube"></i></a>
+                <a href="https://t.me/urrrrn" target="_blank" class="social-icon telegram" title="telegram"><i class="fab fa-telegram"></i></a>
+                <a href="https://www.facebook.com/share/157UXfqBQc4/" target="_blank" class="social-icon facebook" title="telegram"><i class="fab fa-facebook"></i></a>
             </section>
 
             <!-- Additional Links (Optional) -->
